--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,14 @@
 /* Reset */
 * {
   margin: 0;
-  padding:0;
+  padding: 0;
   box-sizing: border-box;
 }
 
 /* Main Styling */
-html,body {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+html,
+body {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   line-height: 1.7em;
 }
 
@@ -16,7 +17,9 @@ a {
   text-decoration: none;
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
   padding-bottom: 20px;
 }
 
@@ -24,52 +27,42 @@ p {
   margin: 10px 0;
 }
 
-/* Utility Classes */
+/* Utilities */
 .container {
-  margin: auto;
   max-width: 1100px;
+  margin: auto;
   overflow: auto;
   padding: 0 20px;
 }
-
 .text-primary {
   color: #f7c08a;
 }
-
 .lead {
   font-size: 20px;
 }
-
 .btn {
   display: inline-block;
-  font-size: 18px;
   color: #fff;
-  background: #333;
-  padding: 13px 20px;
-  border: none;
-  cursor: pointer;
+  font-size: 18px;
+  background-color: #333;
 }
-
 .btn:hover {
-  background: #f7c08a;
+  background-color: #f7c08a;
   color: #333;
 }
-
 .btn-light {
-  background: #f4f4f4;
+  display: inline-block;
   color: #333;
+  background-color: #f4f4f4;
 }
-
 .bg-dark {
   background: #333;
   color: #fff;
 }
-
 .bg-light {
   background: #f4f4f4;
   color: #333;
 }
-
 .bg-primary {
   background: #f7c08a;
   color: #333;
@@ -81,20 +74,27 @@ p {
 
 .l-heading {
   font-size: 40px;
+  line-height: 1.2;
 }
 
 /* Padding */
-.py-1 { padding: 10px 0; }
-.py-2 { padding: 20px 0; }
-.py-3 { padding: 30px 0; }
+
+.py-1 {
+  padding: 10px 0;
+}
+.py-2 {
+  padding: 20px 0;
+}
+.py-3 {
+  padding: 30px 0;
+}
 
 /* Navbar */
 #navbar {
-  background: #333;
+  background-color: #333;
   color: #fff;
   overflow: auto;
 }
-
 #navbar a {
   color: #fff;
 }
@@ -103,38 +103,39 @@ p {
   float: left;
   padding-top: 20px;
 }
-
+.logo {
+  float: left;
+  height: 65px;
+  padding-top: 5px;
+}
 #navbar ul {
   list-style: none;
   float: right;
 }
-
 #navbar ul li {
   float: left;
 }
-
 #navbar ul li a {
   display: block;
   padding: 20px;
   text-align: center;
 }
-
-#navbar ul li a:hover, 
+#navbar ul li a:hover,
 #navbar ul li a.current {
-  background: #444;
+  background-color: #444;
   color: #f7c08a;
 }
 
 /* Showcase */
 #showcase {
-  background: url('../img/showcase.jpg') no-repeat center center/cover;
+  background: url(../img/showcase.jpg) no-repeat center center/cover;
   height: 600px;
 }
 
 #showcase .showcase-content {
   color: #fff;
-  text-align: center;
   padding-top: 170px;
+  text-align: center;
 }
 
 #showcase .showcase-content h1 {
@@ -147,18 +148,17 @@ p {
   line-height: 1.7em;
 }
 
-/* Home Info */
+/* Home-Info */
 #home-info {
-  height: 400px;
+  height: 450px;
 }
 
 #home-info .info-img {
   float: left;
   width: 50%;
-  background: url('../img/photo-1.jpg') no-repeat;
+  background: url(../img/photo-1.jpg) no-repeat;
   min-height: 100%;
 }
-
 #home-info .info-content {
   float: right;
   width: 50%;
@@ -167,7 +167,6 @@ p {
   padding: 50px 30px;
   overflow: hidden;
 }
-
 #home-info .info-content p {
   padding-bottom: 30px;
 }
@@ -177,9 +176,8 @@ p {
   float: left;
   width: 33.3%;
   padding: 50px;
-  text-align:center;
+  text-align: center;
 }
-
 .box i {
   margin-bottom: 10px;
 }
@@ -190,14 +188,12 @@ p {
   width: 50%;
   min-height: 100%;
 }
-
 #about-info .info-right img {
+  width: 70%;
   display: block;
   margin: auto;
-  width: 70%;
   border-radius: 50%;
 }
-
 #about-info .info-left {
   float: left;
   width: 50%;
@@ -206,17 +202,18 @@ p {
 
 /* Testimonials */
 #testimonials {
-  height: 600px;
-  background: url('../img/test-bg.jpg') no-repeat center center/cover;
+  height: 100%;
+  background: url(../img/test-bg.jpg) no-repeat center center/cover;
   padding-top: 100px;
 }
 
 #testimonials h2 {
   color: #fff;
   text-align: center;
-  padding-bottom: 40px;
+  padding-bottom: 40px 0;
+  /* height: 9vh;
+  line-height: 1vh; */
 }
-
 #testimonials .testimonial {
   padding: 20px;
   margin-bottom: 40px;
@@ -231,7 +228,8 @@ p {
   border-radius: 50%;
 }
 
-/* Contact Form */
+/* Contact-Form*/
+
 #contact-form .form-group {
   margin-bottom: 20px;
 }
@@ -240,19 +238,18 @@ p {
   display: block;
   margin-bottom: 5px;
 }
-
-#contact-form input, 
+#contact-form input,
 #contact-form textarea {
   width: 100%;
   padding: 10px;
-  border: 1px #ddd solid;
+  border: 1px solid #ddd;
 }
 
 #contact-form textarea {
   height: 200px;
 }
 
-#contact-form input:focus, 
+#contact-form input:focus,
 #contact-form textarea:focus {
   outline: none;
   border-color: #f7c08a;
@@ -261,7 +258,7 @@ p {
 /* Footer */
 #main-footer {
   text-align: center;
-  background: #444;
+  background-color: #444;
   color: #fff;
   padding: 20px;
 }
